@@ -16,17 +16,12 @@
 package io.reactivesocket;
 
 import static org.junit.Assert.assertEquals;
-import static rx.Observable.empty;
-import static rx.Observable.error;
-import static rx.Observable.just;
-import static rx.Observable.never;
-import static rx.Observable.range;
-import static rx.RxReactiveStreams.toObservable;
-import static rx.RxReactiveStreams.toPublisher;
+import static io.reactivex.Observable.*;
 
 import java.util.Arrays;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.TimeUnit;
+import java.util.stream.Collectors;
 
 import org.junit.Before;
 import org.junit.Ignore;
@@ -34,10 +29,10 @@ import org.junit.Test;
 
 import io.reactivesocket.internal.Requester;
 import io.reactivesocket.internal.Responder;
-import rx.Observable;
-import rx.Observer;
-import rx.observers.TestSubscriber;
-import rx.schedulers.Schedulers;
+import io.reactivex.Observable;
+import io.reactivex.Observer;
+import io.reactivex.schedulers.Schedulers;
+import io.reactivex.subscribers.TestSubscriber;
 import uk.co.real_logic.agrona.collections.Long2ObjectHashMap;
 
 public class RequesterResponderInteractionTest
@@ -48,7 +43,8 @@ public class RequesterResponderInteractionTest
     /**
      * Connect a client/server with protocols on either end.
      */
-    @Before
+    @SuppressWarnings("resource")
+	@Before
     public void setup() {
         System.out.println("-----------------------------------------------------------------------");
         TestConnection serverConnection = new TestConnection();
@@ -75,11 +71,11 @@ public class RequesterResponderInteractionTest
 
                 if (requestResponse.equals("hello"))
                 {
-                    return toPublisher(just(TestUtil.utf8EncodedPayload(requestResponse + " world", null)));
+                    return just(TestUtil.utf8EncodedPayload(requestResponse + " world", null));
                 }
                 else
                 {
-                    return toPublisher(error(new Exception("Not Found!")));
+                    return error(new Exception("Not Found!"));
                 }
             },
             requestStreamPayload -> {
@@ -87,11 +83,11 @@ public class RequesterResponderInteractionTest
 
                 if (requestStream.equals("range"))
                 {
-                    return toPublisher(range(0, 3).map(String::valueOf).map(i -> TestUtil.utf8EncodedPayload(i, null)));
+                    return range(0, 3).map(String::valueOf).map(i -> TestUtil.utf8EncodedPayload(i, null));
                 }
                 else
                 {
-                    return toPublisher(error(new Exception("Not Found!")));
+                    return error(new Exception("Not Found!"));
                 }
             },
             requestSubscriptionPayload -> {
@@ -99,17 +95,16 @@ public class RequesterResponderInteractionTest
 
                 if (requestSubscription.equals("range"))
                 {
-                    return toPublisher(range(0, 3).map(String::valueOf).map(i -> TestUtil.utf8EncodedPayload(i, null))
-                        .mergeWith(never()));// never() so it doesn't complete
+                    return range(0, 3).map(String::valueOf).map(i -> TestUtil.utf8EncodedPayload(i, null)).mergeWith(never());// never() so it doesn't complete
                 }
                 else if (requestSubscription.equals("rangeThatCompletes"))
                 {
                     // complete and show it turns into an error
-                    return toPublisher(range(0, 2).map(String::valueOf).map(i -> TestUtil.utf8EncodedPayload(i, null)));
+                    return range(0, 2).map(String::valueOf).map(i -> TestUtil.utf8EncodedPayload(i, null));
                 }
                 else
                 {
-                    return toPublisher(error(new Exception("Not Found!")));
+                    return error(new Exception("Not Found!"));
                 }
             },
             fireAndForgetPayload -> {
@@ -117,11 +112,11 @@ public class RequesterResponderInteractionTest
 
                 if (fireAndForget.equals("hello"))
                 {
-                    return toPublisher(empty());// nothing responds
+                    return empty();// nothing responds
                 }
                 else
                 {
-                    return toPublisher(error(new Exception("Not Found!")));
+                    return error(new Exception("Not Found!"));
                 }
             }), err -> err.printStackTrace());
 
@@ -130,50 +125,50 @@ public class RequesterResponderInteractionTest
 
     @Ignore
     @Test
-    public void testRequestResponseSuccess() {
-        TestSubscriber<Payload> ts = TestSubscriber.create();
-        toObservable(requester.requestResponse(TestUtil.utf8EncodedPayload("hello", null))).subscribe(ts);
-        ts.awaitTerminalEvent(500, TimeUnit.MILLISECONDS);
+    public void testRequestResponseSuccess() throws InterruptedException {
+        TestSubscriber<Payload> ts = new TestSubscriber<>();
+        fromPublisher(requester.requestResponse(TestUtil.utf8EncodedPayload("hello", null))).subscribe(ts);
+        ts.await(1000, TimeUnit.MILLISECONDS);
         ts.assertValue(TestUtil.utf8EncodedPayload("hello world", null));
     }
 
     @Ignore
     @Test
-    public void testRequestResponseError() {
-        TestSubscriber<Payload> ts = TestSubscriber.create();
-        toObservable(requester.requestResponse(TestUtil.utf8EncodedPayload("doesntExist", null))).subscribe(ts);
-        ts.awaitTerminalEvent(500, TimeUnit.MILLISECONDS); // TODO this fails non-deterministically
+    public void testRequestResponseError() throws InterruptedException {
+        TestSubscriber<Payload> ts = new TestSubscriber<>();
+        fromPublisher(requester.requestResponse(TestUtil.utf8EncodedPayload("doesntExist", null))).subscribe(ts);
+        ts.await(1000, TimeUnit.MILLISECONDS); // TODO this fails non-deterministically
         ts.assertError(Exception.class);
-        assertEquals("Not Found!", ts.getOnErrorEvents().get(0).getMessage());
+        assertEquals("Not Found!", ts.errors().get(0).getMessage());
     }
 
     @Ignore
     @Test
-    public void testRequestStreamSuccess() {
-        TestSubscriber<Payload> ts = TestSubscriber.create();
-        toObservable(requester.requestStream(TestUtil.utf8EncodedPayload("range", null))).subscribe(ts);
-        ts.awaitTerminalEvent(500, TimeUnit.MILLISECONDS);
-        ts.assertReceivedOnNext(Observable.just("0", "1", "2").map(s -> TestUtil.utf8EncodedPayload(s, null)).toList().toBlocking().single());
+    public void testRequestStreamSuccess() throws InterruptedException {
+        TestSubscriber<Payload> ts = new TestSubscriber<>();
+        fromPublisher(requester.requestStream(TestUtil.utf8EncodedPayload("range", null))).subscribe(ts);
+        ts.await(1000, TimeUnit.MILLISECONDS);
+        ts.assertValueSequence(Arrays.asList("0", "1", "2").stream().map(s -> TestUtil.utf8EncodedPayload(s, null)).collect(Collectors.toList()));
     }
 
     @Ignore
     @Test
-    public void testRequestStreamError() {
-        TestSubscriber<Payload> ts = TestSubscriber.create();
-        toObservable(requester.requestStream(TestUtil.utf8EncodedPayload("doesntExist", null))).subscribe(ts);
-        ts.awaitTerminalEvent(500, TimeUnit.MILLISECONDS);
+    public void testRequestStreamError() throws InterruptedException {
+        TestSubscriber<Payload> ts = new TestSubscriber<>();
+        fromPublisher(requester.requestStream(TestUtil.utf8EncodedPayload("doesntExist", null))).subscribe(ts);
+        ts.await(1000, TimeUnit.MILLISECONDS);
         ts.assertError(Exception.class);
-        assertEquals("Not Found!", ts.getOnErrorEvents().get(0).getMessage());
+        assertEquals("Not Found!", ts.errors().get(0).getMessage());
     }
 
     @Ignore
     @Test
     public void testRequestSubscriptionSuccess() throws InterruptedException {
         CountDownLatch latch = new CountDownLatch(3);
-        TestSubscriber<Payload> ts = TestSubscriber.create(new Observer<Payload>() {
+        TestSubscriber<Payload> ts = new TestSubscriber<>(new Observer<Payload>() {
 
             @Override
-            public void onCompleted() {
+            public void onComplete() {
                 
             }
 
@@ -188,53 +183,53 @@ public class RequesterResponderInteractionTest
             }
             
         });
-        toObservable(requester.requestSubscription(TestUtil.utf8EncodedPayload("range", null))).subscribe(ts);
+        fromPublisher(requester.requestSubscription(TestUtil.utf8EncodedPayload("range", null))).subscribe(ts);
         // wait for 3 events (but no terminal event)
-        latch.await(500, TimeUnit.MILLISECONDS);
-        ts.assertReceivedOnNext(Observable.just("0", "1", "2").map(s -> TestUtil.utf8EncodedPayload(s, null)).toList().toBlocking().single());
-        ts.assertNoTerminalEvent();
-        ts.unsubscribe();
+        latch.await(1000, TimeUnit.MILLISECONDS);
+        ts.assertValueSequence(Arrays.asList("0", "1", "2").stream().map(s -> TestUtil.utf8EncodedPayload(s, null)).collect(Collectors.toList()));
+        ts.assertNotTerminated();
+        ts.cancel();
     }
 
     @Ignore
     @Test
-    public void testRequestSubscriptionErrorOnCompletion() {
-        TestSubscriber<Payload> ts = TestSubscriber.create();
-        toObservable(requester.requestSubscription(TestUtil.utf8EncodedPayload("rangeThatCompletes", null))).subscribe(ts);
-        ts.awaitTerminalEvent(500, TimeUnit.MILLISECONDS); // TODO this fails non-deterministically
-        ts.assertReceivedOnNext(Observable.just("0", "1").map(s -> TestUtil.utf8EncodedPayload(s, null)).toList().toBlocking().single());
+    public void testRequestSubscriptionErrorOnCompletion() throws InterruptedException {
+        TestSubscriber<Payload> ts = new TestSubscriber<>();
+        fromPublisher(requester.requestSubscription(TestUtil.utf8EncodedPayload("rangeThatCompletes", null))).subscribe(ts);
+        ts.await(1000, TimeUnit.MILLISECONDS); // TODO this fails non-deterministically
+        ts.assertValueSequence(Arrays.asList("0", "1").stream().map(s -> TestUtil.utf8EncodedPayload(s, null)).collect(Collectors.toList()));
         ts.assertError(Exception.class);
-        assertEquals("Subscription terminated unexpectedly", ts.getOnErrorEvents().get(0).getMessage());
+        assertEquals("Subscription terminated unexpectedly", ts.errors().get(0).getMessage());
     }
 
     @Ignore
     @Test
-    public void testRequestSubscriptionError() {
-        TestSubscriber<Payload> ts = TestSubscriber.create();
-        toObservable(requester.requestStream(TestUtil.utf8EncodedPayload("doesntExist", null))).subscribe(ts);
-        ts.awaitTerminalEvent(500, TimeUnit.MILLISECONDS); // TODO this fails non-deterministically
+    public void testRequestSubscriptionError() throws InterruptedException {
+        TestSubscriber<Payload> ts = new TestSubscriber<>();
+        fromPublisher(requester.requestStream(TestUtil.utf8EncodedPayload("doesntExist", null))).subscribe(ts);
+        ts.await(1000, TimeUnit.MILLISECONDS); // TODO this fails non-deterministically
         ts.assertError(Exception.class);
-        assertEquals("Not Found!", ts.getOnErrorEvents().get(0).getMessage());
+        assertEquals("Not Found!", ts.errors().get(0).getMessage());
     }
 
     @Ignore
     @Test
-    public void testFireAndForgetSuccess() {
-        TestSubscriber<Void> ts = TestSubscriber.create();
-        toObservable(requester.fireAndForget(TestUtil.utf8EncodedPayload("hello", null))).subscribe(ts);
-        ts.awaitTerminalEvent(500, TimeUnit.MILLISECONDS);
+    public void testFireAndForgetSuccess() throws InterruptedException {
+        TestSubscriber<Void> ts = new TestSubscriber<>();
+        fromPublisher(requester.fireAndForget(TestUtil.utf8EncodedPayload("hello", null))).subscribe(ts);
+        ts.await(1000, TimeUnit.MILLISECONDS);
         ts.assertValueCount(0);
-        ts.assertNoErrors();
+        ts.assertNoError();
     }
 
     // this is testing that the client is completely unaware of server-side errors
     @Ignore
     @Test
-    public void testFireAndForgetError() {
-        TestSubscriber<Void> ts = TestSubscriber.create();
-        toObservable(requester.fireAndForget(TestUtil.utf8EncodedPayload("doesntExist", null))).subscribe(ts);
-        ts.awaitTerminalEvent(500, TimeUnit.MILLISECONDS);
-        ts.assertNoErrors();// because we "forget"
+    public void testFireAndForgetError() throws InterruptedException {
+        TestSubscriber<Void> ts = new TestSubscriber<>();
+        fromPublisher(requester.fireAndForget(TestUtil.utf8EncodedPayload("doesntExist", null))).subscribe(ts);
+        ts.await(1000, TimeUnit.MILLISECONDS);
+        ts.assertNoError();// because we "forget"
     }
 
 }
